dist/ffi/include/sekejap.h

// An open database. Created by `sekejap_open`,
// `sekejap_open_with_config` or `sekejap_open_service`; destroyed by
// `sekejap_close`. `Send + Sync`: it MAY be shared across threads.
typedef struct SekejapDb SekejapDb;
// The bytes on disk, as a heap JSON object
// `{"data_bytes": n, "wal_bytes": n, "total_bytes": n}`. `NULL` on failure.
//
// # Safety
// `db` must be a live handle.
char *sekejap_storage(SekejapDb *db);
// Refuse a statement that runs longer than `milliseconds`. `0` clears the
// timeout. `0` on success, `-1` on failure -- which includes a handle that
// is not in service mode, REFUSED by name.
//
// # Safety
// `db` must be a live handle.
int32_t sekejap_statement_timeout_ms(SekejapDb *db, uint64_t milliseconds);
// Cancel the work in flight on this service, from any thread. The flag is
// STICKY until `sekejap_clear_interrupt`. `0` on success, `-1` on failure
// -- which includes a handle that is not in service mode.
//
// # Safety
// `db` must be a live handle.
int32_t sekejap_cancel(SekejapDb *db);
// Clear a cancel so the service accepts work again. `1` when a cancel was
// standing, `0` when none was, `-1` on failure.
//
// # Safety
// `db` must be a live handle.
int32_t sekejap_clear_interrupt(SekejapDb *db);
// Subscribe to the commit-time change feed. Returns a subscription id to
// pass to `sekejap_next_change` and `sekejap_unsubscribe`, or `-1` on
// failure -- which includes a handle that is not in service mode.
//
// The subscription is owned by the database handle, so an id is valid from
// any thread; a subscription left open is closed by `sekejap_close`.
//
// # Safety
// `db` must be a live handle.
long sekejap_subscribe(SekejapDb *db);
// The next change event for one subscription, as a heap JSON object, or
// `NULL` with `SekejapStatus_Ok` when none arrived. `timeout_ms` of `0`
// polls and returns at once; a positive value waits that long.
//
// The object is
// `{"sequence", "collections", "edge_types", "keys", "keys_total",
// "keys_truncated", "unnamed_writes", "rows_affected"}`. `keys` is empty
// and `keys_truncated` true when the batch moved more keys than the feed's
// per-event cap: the list is dropped whole rather than handed over
// half-true, and `collections` is still exact.
//
// # Safety
// `db` must be a live handle.
char *sekejap_next_change(SekejapDb *db, long subscription, uint64_t timeout_ms);
// Close one subscription. `1` when it was open on the service, `0` when it
// was not, `-1` on failure.
//
// # Safety
// `db` must be a live handle.
int32_t sekejap_unsubscribe(SekejapDb *db, long subscription);
// REFUSED: sekejap is disk-first and has no in-memory database. Always
// `NULL`, with the reason in `sekejap_last_error` and
// `SekejapStatus_Refused` in `sekejap_last_error_code`.
//
// A temporary directory would be a fake of an ephemeral store, so this does
// not make one. Give `sekejap_open` a directory.
SekejapDb *sekejap_open_memory(void);
// REFUSED: there is nothing proportional to rows held in memory to trim.
// Always `-1`, with the reason in `sekejap_last_error`.
//
// The caches sekejap keeps are bounded at open -- the buffer pool by
// `budget_bytes`, the plan cache by its three ceilings -- so a trim call
// would have nothing to give back, and a no-op that returned success would
// be a fake of reclaim.
//
// # Safety
// `db` may be NULL; when it is not, it must be a live handle.
int32_t sekejap_trim_memory(SekejapDb *db);
// REFUSED: there is no payload-rewriting compaction. Always `-1`.
// `sekejap_checkpoint` folds the committed write-ahead log into the data
// file; it does not rewrite rows, and naming that `compact` would promise
// something else.
//
// # Safety
// `db` may be NULL; when it is not, it must be a live handle.
int32_t sekejap_compact(SekejapDb *db);
// REFUSED: the `SHOW` family is not in this dialect. Always `NULL`.
// `sekejap_collections` and `sekejap_describe` answer the same
// questions as DATA rather than as a result set.
//
// # Safety
// `db` may be NULL; `statement` may be NULL.
char *sekejap_show(SekejapDb *db, const char *statement);