dist/bindings/wrappers/dart/lib/src/bindings.dart


  late final storage = library.lookupFunction<
      Pointer<Utf8> Function(Pointer<NativeDb>),
      Pointer<Utf8> Function(Pointer<NativeDb>)>('sekejap_storage');

  // ── 4.9 Service mode ──────────────────────────────────────────────────────

  late final statementTimeoutMs = library.lookupFunction<
      Int32 Function(Pointer<NativeDb>, Uint64),
      int Function(Pointer<NativeDb>, int)>('sekejap_statement_timeout_ms');

  late final cancel = library.lookupFunction<Int32 Function(Pointer<NativeDb>),
      int Function(Pointer<NativeDb>)>('sekejap_cancel');

  late final clearInterrupt = library.lookupFunction<
      Int32 Function(Pointer<NativeDb>),
      int Function(Pointer<NativeDb>)>('sekejap_clear_interrupt');

  late final subscribe = library.lookupFunction<
      Long Function(Pointer<NativeDb>),
      int Function(Pointer<NativeDb>)>('sekejap_subscribe');

  late final nextChange = library.lookupFunction<
      Pointer<Utf8> Function(Pointer<NativeDb>, Long, Uint64),
      Pointer<Utf8> Function(
          Pointer<NativeDb>, int, int)>('sekejap_next_change');

  late final unsubscribe = library.lookupFunction<
      Int32 Function(Pointer<NativeDb>, Long),
      int Function(Pointer<NativeDb>, int)>('sekejap_unsubscribe');

  // ── 4.10 Refused by name ──────────────────────────────────────────────────
  //
  // These four keep their symbol so the refusal arrives with a name and a
  // reason rather than as a missing-symbol error. All four always fail.

  late final openMemory = library.lookupFunction<Pointer<NativeDb> Function(),
      Pointer<NativeDb> Function()>('sekejap_open_memory');

  late final trimMemory = library.lookupFunction<
      Int32 Function(Pointer<NativeDb>),
      int Function(Pointer<NativeDb>)>('sekejap_trim_memory');

  late final compact = library.lookupFunction<Int32 Function(Pointer<NativeDb>),
      int Function(Pointer<NativeDb>)>('sekejap_compact');

  late final show = library.lookupFunction<
      Pointer<Utf8> Function(Pointer<NativeDb>, Pointer<Utf8>),
      Pointer<Utf8> Function(Pointer<NativeDb>, Pointer<Utf8>)>('sekejap_show');
}
